  pracma                                                                NEWS
------------------------------------------------------------------------------


PLANNED FOR NEXT VERSIONS

    o [tbd.]
    o mexpfit() exponentiell fitting.
    o lsqlin() least-squares solver with linear constraints.

CHANGES IN VERSION 1.1.9 (2012-09-29)

    o Removed number-theoretic functions: eulersPhi(),
      moebiusFun(), mertensFun(), sigma(), tau(), omega(), Omega(),
      primes2(), twinPrimes(), nextPrime(), previousPrime(),
      modpower(), modorder(), primroot()
      (these functions are now available in the 'numbers' package).

CHANGES IN VERSION 1.1.8 (2012-09-19)

    o ezcontour(), ezmesh() wrappers for contour(), image(), persp().
    o erfi() imaginary error function.

CHANGES IN VERSION 1.1.7 (2012-08-06)

    o Moler() Moler matrix
      (named so by John C. Nash, vectorized by Ravi Varadhan).
    o Renamed hankel to Hankel, rosser to Rosser, wilkinson to Wilkinson.

CHANGES IN VERSION 1.1.6 (2012-07-20)

    o Removed '.Rapphistory' from the tests directory (again)
      [and use "--as-cran" for the checks].
    o disp() display text or array (Matlab Style), i.e. cat() with newline.

CHANGES IN VERSION 1.1.5 (2012-07-18)

    o Renamed functions with capital first letter to avoid name clashes:
      And/Or, mtrace -> Trace, mdiag -> Diag, strtrim -> strTrim,
      reshape -> Reshape, find -> Find, fix -> Fix,
      mode -> Mode, real -> Real, imag -> Imag,
      hadamard -> Hadamard, toeplitz -> Toeplitz,
      poly -> Poly.

CHANGES IN VERSION 1.1.4 (2012-06-26)

    o gammainc() (lower and upper) incomplete gamma function, also the
      regularized gamma function, all allowing negative x values.
    o polylog() the polylogarithm functions for |z| < 1 and n >= -4 .

CHANGES IN VERSION 1.1.3 (2012-06-17)

    o fminsearch() now implements Nelder-Mead (similar to optim), and
      Fletcher-Powell when ``dfree=FALSE'' is chosen.